chore: update readme and fix issues with installation

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,8 @@ devtools::install_github("chrisbrownlie/advancedShiny")
 The app can be run with the following command:
 
 ```{r eval=FALSE}
-advancedShiny::run_IAS_app()
+library(advancedShiny)
+run_IAS_app()
 ```
 
 # More info
